# RO2_pub-sub_msg

./: README.md
control_pub/: CMakeLists.txt  package.xml
control_pub/src/: publisher_member_function.cpp  ros_receive one image.cpp  subscriber_member_function.cpp
custom _ros_msg/: CMakeLists.txt  package.xml
custom _ros_msg/msg/: Parkinglot.msg
